Fix legible text size for .description on mobile devices

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -283,7 +283,7 @@ html[data-theme="light"] .listInput {
   }
 
   .description {
-    font-size: 0.65rem;
+    font-size: 0.765rem;
   }
 
   .listTable,
